syntax = "proto3";

package atomix.value.service;

import "atomix/primitive/service.proto";

option java_package = "io.atomix.core.value.impl";
option java_outer_classname = "ValueProto";
option java_multiple_files = true;

// Atomic value snapshot
message AtomicValueSnapshot {
    int64 version = 1;
    bytes value = 2;
}

message GetRequest {

}

message GetResponse {
    bytes value = 1;
    int64 version = 2;
}

message SetRequest {
    bytes value = 1;
}

message SetResponse {
    int64 version = 1;
    bytes previous_value = 2;
    int64 previous_version = 3;
}

message CheckAndSetRequest {
    bytes check = 1;
    bytes update = 2;
    int64 version = 3;
}

message CheckAndSetResponse {
    int64 version = 1;
    bool succeeded = 2;
}

message ListenRequest {

}

message ListenResponse {
    Type type = 1;
    bytes previous_value = 2;
    int64 previous_version = 3;
    bytes new_value = 4;
    int64 new_version = 5;

    enum Type {
        UPDATED = 0;
    }
}

message UnlistenRequest {
    int64 stream_id = 1;
}

message UnlistenResponse {
}

service ValueService {
    rpc Set(SetRequest) returns (SetResponse) {
        option (atomix.primitive.service.operation) = {
            name: "set"
            type: COMMAND
        };
    }

    rpc Get(GetRequest) returns (GetResponse) {
        option (atomix.primitive.service.operation) = {
            name: "get"
            type: QUERY
        };
    }

    rpc CheckAndSet(CheckAndSetRequest) returns (CheckAndSetResponse) {
        option (atomix.primitive.service.operation) = {
            name: "cas"
            type: COMMAND
        };
    }

    rpc Listen(ListenRequest) returns (stream ListenResponse) {
        option (atomix.primitive.service.operation) = {
            name: "listen"
            type: COMMAND
        };
    }

    rpc Unlisten(UnlistenRequest) returns (UnlistenResponse) {
        option (atomix.primitive.service.operation) = {
            name: "unlisten"
            type: COMMAND
        };
    }
}